src/test/ui/error-codes/E0647.stderr
error[E0647]: start function is not allowed to have a `where` clause
  --> $DIR/E0647.rs:7:56
   |
LL | fn start(_: isize, _: *const *const u8) -> isize where (): Copy { //~ ERROR [E0647]
   |                                                        ^^^^^^^^ start function cannot have a `where` clause

error: aborting due to previous error

For more information about this error, try `rustc --explain E0647`.
